# COBRA

./: README.md  extract_slide_embs.sh  extract_slide_embsII.sh  extract_slide_embs_cptac.sh  extract_slide_embs_others.sh  pyproject.toml
cobra/config/: cobra-2n.yml  cobra-4096.yml  cobra-4n.yml  cobra-8192.yml  cobra-orig.yml  cobra.yml  cobraII.yml  crossval.yml
cobra/configs/: example.yml
cobra/crossval/: deploy.py  train.py
cobra/inference/: extract_feats.py  extract_feats_patient.py  extract_feats_slide.py  heatmaps.py  top_tiles.py
cobra/model/: cobra.py
cobra/ssl/: data.py  model.py  pretrain.py
cobra/utils/: get_mpp.py  load_cobra.py  mamba2.py
inference/: extract_feats.py
jobs/: extract_feats.job  extract_feats_cptac.job  extract_feats_others.job  pretrain-2n.job  pretrain-4096.job  pretrain-4n.job  pretrain-8192.job  pretrain-orig.job  pretrain.job  pretrain_old.job
ssl/: model.py  pretrain.py
utils/: mamba.py
