[project]
name = "cobra"
version = "0.1.0"
description = "Slide Encoder for Computational Pathology"
readme = "README.md"
license = {text = "GPLv3"}
authors = [
    {name = "Tim Lenz", email = "tim.lenz@tu-dresden.de"},
    {name = "Peter Neidlinger", email = "peter.neidlinger@fau.de"}
]
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.6.0",
    "h5py>=3.12.1",
    "jinja2>=3.1.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "mamba-ssm @ git+https://github.com/KatherLab/mamba.git@d0d4192621889b26f9669ea4a8e6fe79cc84e8d9",
    "causal-conv1d @ git+https://github.com/KatherLab/causal-conv1d.git@b73d1ca0e0726ba6520c38d342bd411bb5850064",
    "torchvision>=0.19.1",
    "einops>=0.8.0",
    "huggingface-hub>=0.26.5",
    "torchmetrics>=1.6.1",
    "pytorch-lightning>=2.5.0.post0",
    "scikit-learn>=1.6.1",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.1",
    "openslide-python>=1.4.1",
    "openslide-bin>=4.0.0.6",
]

[build-system]
requires = ["hatchling", "torch"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# To allow referencing git repos in dependencies
allow-direct-references = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.uv.extra-build-dependencies]
mamba-ssm = [{ requirement = "torch", match-runtime = true }]
causal-conv1d = [{ requirement = "torch", match-runtime = true }]